<resources>

    <string name="default_notification_channel_id" translatable="false">1.1.1.0</string>

    <string name="app_name">DraftStreaks</string>
    <string name="text_refer_earn">Refer &amp; Earn</string>
    <string name="text_fantasy_point">Fantasy Points System</string>
    <string name="text_myinfo_setting">My Info &amp; Setting</string>
    <string name="text_how_to_play">How to play</string>
    <string name="text_more">More</string>
    <string name="text_logout">Logout</string>
    <string name="text_invite">Invite</string>
    <string name="text_mybalance">My Balance</string>
    <string name="text_user_name_superhero">User name Superheroes</string>
    <string name="text_help_support">Help and Support</string>
    <string name="text_update">Update</string>
    <string name="text_upto_date">App Up to date</string>
    <string name="text_version">Version 1.1</string>
    <string name="text_add_cash">Add Cash</string>
    <string name="text_enter_amount">Enter Amount</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_amount_added">Amount added (unutilised)</string>
    <string name="text_cash_bounce">Cash bounce</string>
    <string name="text_winning">Winning</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_manage_payment">Manage Payment</string>
    <string name="text_support">Support</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_email_support">support@gmail.com</string>
    <string name="text_email">Email</string>
    <string name="text_frequently_asked">Frequently Asked Questions</string>
    <string name="text_new_user_lets_started">New user? Let’s get started with these basics.</string>
    <string name="text_question_no1">Question number 01 goes in here?</string>
    <string name="text_question_no2">Question number 2 goes in here?</string>
    <string name="text_question_no3">Question number 03 goes in here?</string>
    <string name="text_question_no4">Question number 04 goes in here?</string>
    <string name="text_question_no5">Question number 05 goes in here?</string>
    <string name="text_question_no6">Question number 06 goes in here?</string>
    <string name="text_question_no7">Question number 07 goes in here?</string>
    <string name="text_question_no8">Question number 08 goes in here?</string>
    <string name="text_question_no9">Question number 09 goes in here?</string>
    <string name="text_question_no10">Question number 10 goes in here?</string>
    <string name="text_basketball">Basketball</string>
    <string name="text_football">Football</string>
    <string name="text_price_pool">Prize Pool $ 2M</string>
    <string name="text_upcoming_drafts">Upcoming Drafts</string>
    <string name="text_contest">Contest</string>
    <string name="text_contests">Contests</string>
    <string name="text_mycontests">My Contests</string>
    <string name="text_myteam">My Team</string>
    <string name="text_sortby">Sort By:</string>
    <string name="text_entry">Entry</string>
    <string name="text_spots">Spots</string>
    <string name="text_winners">%Winners</string>
    <string name="text_mega_contest">Mega Contest</string>
    <string name="text_join">Join $100</string>
    <string name="text_guaranteed">Guaranteed</string>
    <string name="text_spots_left">Spots Left</string>
    <string name="text_join_league">Join League</string>
    <string name="text_create_league">Create League</string>
    <string name="text_join_contest">Join Contest</string>
    <string name="text_enter_your_code">Enter Your Code</string>
    <string name="text_custom_league">Custom League</string>
    <string name="text_create_your_custom">Create your custom league</string>
    <string name="text_draft">Draft</string>
    <string name="text_enter_your_league_name">Enter your league name</string>
    <string name="text_entry_fees">Entry fees</string>
    <string name="text_winning_amount">Winning amount</string>
    <string name="text_number_of_spots">Number of spots</string>
    <string name="text_number_of_winners">Number of winners</string>
    <string name="text_type_of_league">Type of league</string>
    <string name="text_set_winning_amt">Set Winning Amount</string>
    <string name="text_rank_from">Rank From</string>
    <string name="text_rank_to">Rank To</string>
    <string name="text_amount">Amount</string>
    <string name="text_addmore">Add More</string>
    <string name="text_list_your_league">List of your custom leagues</string>
    <string name="text_leaderboard">Leaderboard</string>
    <string name="text_be_the_first">Be the first in your network to join this contest</string>
    <string name="text_rank">Rank</string>
    <string name="text_points">Points</string>
    <string name="text_user">User</string>
    <string name="text_player_name_hint">Player Name</string>
    <string name="text_big_board">Big Board</string>
    <string name="text_score">Score</string>
    <string name="text_price_capital">Prize</string>
    <string name="text_point_system">Point System</string>
    <string name="text_search_player">Search Player....</string>
    <string name="text_nationality">Nationality</string>
    <string name="text_highest_projected">Highest Projected Pick </string>
    <string name="text_guide">Guide</string>
    <string name="text_player_name">Caleb Williams</string>
    <string name="text_usa">United States</string>
    <string name="text_junior">Junior</string>
    <string name="text_height">Height</string>
    <string name="text_weight">Weight</string>
    <string name="text_hometown">Home Town</string>
    <string name="text_age_in">Age in Years</string>
    <string name="text_highschool">High School</string>
    <string name="text_dob">DOB</string>
    <string name="text_confirmation">Confirmation</string>
    <string name="text_contest_name">Contest Name</string>
    <string name="text_match_name">Match Name</string>
    <string name="text_subtotal">Sub Total</string>
    <string name="text_total">Total</string>
    <string name="text_win_">Win Amount $ 20M</string>
    <string name="text_submit_draft">Submit Draft</string>
    <string name="text_country_to_popular">Contrary to popular belief, Lorem Ipsum is not simply random Contrary to popular belief, Lorem Ipsum is not simply text. Contrary to popular belie  </string>
    <string name="text_fill_out_your">Fill out your predictive mock 2024 NBA Draft</string>
    <string name="text_predict">Predict the Future</string>
    <string name="text_tellusnumber">Tell Us Your Mobile Number</string>
    <string name="text_countrytopopular_random">Contrary to popular belief, Lorem Ipsum is not simply random </string>
    <string name="text_enter_your_mob">Enter Your Mobile Number</string>
    <string name="text_you_will_receiveotp">You will receive an OTP for verification</string>
    <string name="text_above_age">I certify that I am above 18 years.</string>
    <string name="text_pin_sent">6 - Digit PIN has been sent to your phone,
    enter it below to continue.</string>
    <string name="text_verification_code">Verification Code 1.1</string>
    <string name="text_choose_user_name">Choose Your Username<b><font color='#FF0000'>*</font></b></string>
    <string name="text_enter_username_hint">Enter your Username</string>
    <string name="text_note"><b><font color='#EAEAEA'>NOTE:</font></b> Please enter a unique username. Note that once set, it cannot be changed later</string>
    <string name="text_save_name">Save Name</string>
    <string name="text_done">Done</string>
    <string name="text_back">Back</string>
    <string name="text_countryCode_Value">91</string>
    <string name="text_continue">Continue</string>
    <string name="text_skip">Skip</string>
    <string name="fieldCantBeEmpty">Fields can\'t be empty</string>
    <string name="emailCantBeEmpty">UserId field can\'t be empty</string>
    <string name="phoneNumberCantBeEmpty">Phone Number field can\'t be empty</string>
    <string name="passwordCantBeEmpty">Password field can\'t be empty</string>
    <string name="emailNotValid">Email is not valid</string>
    <string name="phoneNotValid">Phone Number is not valid</string>
    <string name="phoneLength">Enter Full Number</string>
    <string name="otpLength">Enter Valid Otp</string>
    <string name="passwordLengthError">Password should contains 1 upper case, 1 digit, 1 special character, </string>
    <string name="text_submit">Submit</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallary">Gallary</string>
    <string name="text_answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_balance_value">$ 000</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="text_day">Day</string>
    <string name="text_seconds">Seconds</string>
    <string name="text_50">50</string>
    <string name="text_minuts">Minuts</string>
    <string name="text_hours">Hours</string>
    <string name="text_10">10</string>
    <string name="text_13">13</string>
    <string name="text_nba">NBA Mock Draft 2024</string>
    <string name="text_prize_pool">Prize Pool $ 2M</string>
    <string name="text_100">100</string>
    <string name="text_500">500</string>
    <string name="text_1000">1000</string>
    <string name="text_10_000">10,000</string>
    <string name="text_phone_value">+91 9885 582 588</string>
    <string name="text_join_only">Join</string>
    <string name="text_enter_your_contest_name">Enter your Contest name</string>
    <string name="text_type_of_contest">Type Of Contest</string>
    <string name="text_create_contest">Create Contest</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logoutMsg">Are you sure you want to Logout?</string>
    <string name="list_of_your_custom_contests">List of your custom Contests</string>
</resources>