<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10ssp"
        android:background="@color/colorPrimaryDark">


                <TextView
                    android:id="@+id/textQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorSky"
                    android:fontFamily="@font/segoe"
                    android:text="@string/text_question_no1"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imgPluse"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/image_plus_circle"
                    android:contentDescription="@string/app_name"
                
                    app:layout_constraintTop_toTopOf="@id/textQuestion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/textQuestion"/>


            <TextView
                android:id="@+id/textAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_answer"
                android:gravity="center"
                android:singleLine="false"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/segoe"
                android:textColor="@color/colorLightSliver"
                tools:ignore="Smallsp"
                app:layout_constraintTop_toBottomOf="@id/textQuestion"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/colorLightSliver"
                app:layout_constraintTop_toBottomOf="@id/textAnswer"

             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>