<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/selectCamera"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/cameralens"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity=""
                    android:lines="1"
                    android:text="@string/text_camera"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/selectCamera"
                    app:layout_constraintEnd_toEndOf="@id/selectCamera"
                    app:layout_constraintTop_toBottomOf="@id/selectCamera"/>

        <ImageView
            android:id="@+id/selectFiles"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/gallary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.798"
            app:layout_constraintStart_toEndOf="@id/selectCamera"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity=""
                    android:lines="1"
                    android:text="@string/text_gallary"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/selectFiles"
                    app:layout_constraintEnd_toEndOf="@id/selectFiles"
                    app:layout_constraintTop_toBottomOf="@id/selectFiles"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>